
 - Speed up quote_name using binary search
   Also a new test t/01keywords.t
   [Michael Conrad]
   (Github pull request #124)

 - Support binding native boolean false on Perl 5.36 and newer
   [Dagfinn Ilmari Mannsåker]

 - Respect pg_bool_tf when binding native booleans on Perl 5.36 and newer
   [Dagfinn Ilmari Mannsåker]
   (Github issue #125 and pull request #129)

 - Require ExtUtils::MakeMaker 7.64
   [brian d foy]
   [Rainer Weikusat]
   (Github issue #69)
   (Github pull requests #137 #155)

 - C23 compliance for functions taking variable number of arguments
   [Rainer Weikusat]
   (Github pull request #148)

 - Separate $username and $password from DSN parameters in POD
   [Daniel Böhmer]
   (Github pull request #149)

 - Add example for using RETURNING in "insert into foo (...) returning id"
   [H.Merijn Brand]
   (Github pull request #134)

 - Do not use TMPDIR if we are providing a path via DBDPG_TEMDIR environment variable.
   [Greg Sabino Mullane]
   (RT ticket #157598)

 - Switch from netstat to ss for finding free ports during testing
   [Greg Sabino Mullane]


Version 3.18.0 (released December 6, 2023)

 - Support new PQclosePrepared function, added in Postgres 17
   [Greg Sabino Mullane]

 - Better docs about ping always returning a value
   (Github issue #121)


Version 3.17.0  (released August 23, 2023)

 - New database handle attribute pg_skip_deallocate
   Prevents any deallocation of automatically prepared 
     statements to support new pgBouncer feature
   [Greg Sabino Mullane]

 - Fix to handle escaped quotes in connection string
   [Dagfinn Ilmari Mannsåker]

 - Return number of affected rows from a MERGE command
   [Greg Sabino Mullane]
   (Github issue #118)

 - Add support for Github CI actions
   [Gábor Szabó]
   (Github pull request #115)

 - Remove undocumented internal-only pg_pid_number attribute
   [Greg Sabino Mullane]
   (Github issue #102)

 - Small warning in docs about PG_CHAR
   [Greg Sabino Mullane]
   (Github issue #103)